# smart-study-assistant

./: .gitignore  ARCHITECTURE.md  Architecture2.md  README.md  docker-compose.yml
backend/: .env.example  .gitignore  ARCHITECTURE_GUIDE.md  Dockerfile  README.md  pyproject.toml  requirements.txt  verify_structure.py
backend/alembic/: env.py
backend/alembic/versions/: 3041b80c2a6f_create_extraction_documents_table.py
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/routes/: ai.py  upload.py
backend/app/api/v1/: api.py  router.py
backend/app/api/v1/features/diagram/: crud.py  models.py  schemas.py  services.py
backend/app/api/v1/features/extraction/: crud.py  models.py  routes.py  schemas.py  services.py
backend/app/api/v1/features/quiz/: crud.py  models.py  schemas.py  services.py
backend/app/api/v1/features/summarization/: crud.py  models.py  schemas.py  services.py
backend/app/api/v1/routes/: ai.py  health.py  sessions.py
backend/app/core/: #errors.py#  __init__.py  config.py  database.py  errors.py  logging.py  middleware.py
backend/app/core/schemas/: responses.py
backend/app/db/: supabase_client.py
backend/app/db/repositories/: sessions_repo.py
backend/app/prompts/: diagram_prompt.py  quiz_prompt.py  summarize_prompt.py
backend/app/providers/: gemini_provider.py
backend/app/schemas/: ai.py  common.py  sessions.py  upload.py
backend/app/services/: ai_service.py  gemini_service.py  pdf_service.py  storage_service.py
backend/app/utils/: validators.py
backend/docs/: LOCAL_DEVELOPMENT_GUIDE.md
backend/tests/: conftest.py  test_ai.py  test_extraction.py  test_health.py  test_main.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/lib/: api.ts
frontend/src/pages/: Landing.tsx  NotFound.tsx  Study.tsx
frontend/src/types/: index.ts
(+10 files in other folders)
