[tool.poetry]
name = "smart-study-assistant"
version = "1.0.0"
description = "AI-powered study assistant using Google Gemini API"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.101.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
pydantic = ""
pydantic-settings = ""
pdfplumber = "^0.9.0"
python-multipart = "^0.0.6"

[tool.poetry.dev-dependencies]
black = "^23.12"
isort = "^6.0"
flake8 = "^6.1"
mypy = "^1.5"

[tool.black]
line-length = 88
target-version = ["py311"]
skip-string-normalization = true

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
known_first_party = ["app"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [".venv", "__pycache__", "build", "dist"]

[tool.mypy]
python_version = 3.11
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
strict = true

[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"
