[tool.poetry]
name = "smart-study-assistant-backend"
version = "0.1.0"
description = "Smart Study Assistant FastAPI backend using Gemini API"
authors = ["Firestorm"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"

fastapi = "^0.110.0"
uvicorn = "^0.29.0"
pydantic = "^2.6.0"
pydantic-settings = "^2.2.1"
google-generativeai = "^0.5.0"
python-dotenv = "^1.0.1"
pdfplumber = "^0.11.0"

[tool.poetry.group.dev.dependencies]
black = "^24.0.0"
ruff = "^0.3.0"
isort = "^5.13.0"

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]

[tool.isort]
profile = "black"